<?xml version="1.0" encoding="utf-8"?>
<Button xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/brand_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:backgroundTint="@color/white"
    android:padding="8dp"
    android:text="Apple"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:textStyle="bold" />
