...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/brands_recycler"
        android:layout_width="383dp"
        android:layout_height="159dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintEnd_toEndOf="parent"
...
