<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:icon="@drawable/home_nav"
        android:id="@+id/home"
        android:enabled="true"/>
    <item android:title="@string/products"
        android:icon="@drawable/product_icon"
        android:id="@+id/product"
        android:enabled="true"/>
    <item android:title="@string/me"
        android:icon="@drawable/me_icon"
        android:id="@+id/me"
        android:enabled="true"
        />
</menu>