...
                android:contentDescription="@string/todo2"
                app:srcCompat="@drawable/clock" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/watched_products_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
