...
                                android:textColor="#9747FF"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/watchedButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/item_border"
                            android:orientation="horizontal"
                            android:paddingVertical="16dp">

...
